app/styles/application.less
@import "app/bower_components/bootstrap/less/variables.less";
@import "app/styles/colors.less";

.application-header {
  h2 {
    a {
      font-size: 75%;
      display: inline-block;
      margin-right: 20px;
    }
    font-weight: 700;
    display: inline-block;
  }
  ul {
    display: inline-block;
    vertical-align: bottom;
    margin-left: 50px;
    text-transform: uppercase;
    font-size: 110%;
    & > li {
      margin-left: 0;
      & > a {
        border-radius: 0;
    }
    }
    a.active {
      border-bottom: 3px solid @link-color;
    }
    a {
      &:focus, &:hover {
        border-bottom: 3px solid #2A6496;
      }
    }
  }
  padding-bottom: 0;
  border-bottom: 1px solid @mid_light_grey;
  margin-top: 10px;
}

.server-group, .load-balancer {
  border: 1px solid #c4c4c4;
  border-radius: 3px;
  padding: 0;
  margin: 15px 0;
  background-color: #f1f1f1;

  .summary {
    font-size: 110%;
    padding: 10px;
    .load-balancers {
      max-width: 50%;
      a {
        display: inline-block;
        margin-right: 5px;
        font-size: 150%;
        line-height: 0;
        .glyphicon {
          line-height: 0;
          top: 6px;
        }
        &.active {
          color: #2a6496;
          text-shadow: 0px 0px 2px #ffffff, 0px 0px 4px #428bca, 0px 0px 6px #428bca;
        }
      }
    }
  }
  .details {
    padding: 0;
    border-top: 1px solid #c4c4c4;
    background-color: #ffffff;

    .load-balancer-server-group {
      padding: 10px;
      border-top: 1px solid #c4c4c4;
      &:first-child {
        border-top-width: 0;
      }

      .instances {
        padding: 5px 0 0 0;
      }
    }

    .instances {
      padding: 5px 10px;
    }

    &.instances-only {
      padding: 10px;
    }

    .build-title {
      font-size: 110%;
      padding: 10px 10px 3px 10px;
    }
  }

  .glyphicon-th {
    color: @healthy_green_icon;
  }

  &.active, &:hover {
    border-color: #121212;
  }

  &.unhealthy {
    border-style: dashed;

  }

  a.instance {
    border: 1px solid @healthy_green_border;
    border-radius: 2px;
    margin-right: 5px;
    display: inline-block;
    width: 15px;
    height: 15px;
    background-color: @healthy_green;

    &.health-status-Healthy {
      background-color: @healthy_green;
      border-color: @healthy_green_border;
    }
    &.health-status-Unhealthy {
      background-color: @unhealthy_red;
      border-color: @unhealthy_red_border;
    }
    &.health-status-Unknown {
      background-color: @light_grey;
      border-color: @mid_grey;
    }

    &.active {
      border-color: @dark_grey;
      background-color: @healthy_green_border;
      &.health-status-Unhealthy {
        background-color: @unhealthy_red_border;
      }
    }
  }
}

.server-group-rollup {
  .sub-group {
    margin-left: 20px;
  }
}

.glyphicon-cloud {
  top: 4px;
}

.actions {
  margin-bottom: 10px;
}

.glyphicon {
  &.healthy {
    color: @healthy_green_border;
  }
  &.unhealthy {
    color: @unhealthy_red;
  }
  &.unknown {
    color: @mid_grey;
  }
}

.instance-health-counts {
  display: inline-block;
  padding-left: 5px;

  .glyphicon {
    &:before {
      font-size: 75%;
    }
  }
}

